--- a/client/src/css/Sidebar.css
+++ b/client/src/css/Sidebar.css
@@ -19,15 +19,20 @@
 /* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
-  width: 36px;
-  height: 30px;
-  right: 36px;
-  top: 36px;
+  width: 26px;
+  height: 20px;
+  right: 20px;
+  top: 15px;
 }
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #787878;
+  background: #ffffff89;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #ffffff;
 }
 
 /* Position and sizing of clickable cross button */
@@ -43,14 +48,9 @@
 
 /* General sidebar styles */
 .bm-menu {
-  background: #373a47;
+  background: linear-gradient(to right, #434343, #000000);
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
-}
-
-/* Morph shape necessary with bubble or elastic */
-.bm-morph-shape {
-  fill: #373a47;
 }
 
 /* Wrapper for item list */
@@ -58,13 +58,37 @@
   color: #b8b7ad;
 }
 
-/* Styling of overlay */
-.bm-overlay {
-  background: rgba(0, 0, 0, 0.3);
+.menu-hr {
+  border: 0.1px solid rgba(255, 255, 255, 0.2);
+  margin: 20px 0;
 }
 
-.page-wrap {
-    position: fixed;
-    width: 100%;
-    height: 100%;
+.menu-categories {
+  text-align: left;
+  font-size: 15px;
+  display: block;
+}
+
+.menu-cat-col {
+  display: inline-block;
+  width: 50%;
+  padding: 0 5px;
+  line-height: 20px;
+}
+
+.menu-cat-head {
+  color: orangered;
+  font-weight: bold;
+  margin: 10px 0 5px 0;
+}
+
+.menu-cat {
+  font-size: 13px;
+}
+
+.menu-about {
+  color: orangered;
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
 }
